cyclist/src/edu/utah/sci/cyclist/assets/Cyclist.css
.root {
	-fx-font-size: 11;
	-fx-font-smoothing-type: lcd;
}

/*
.main-screen {
	-fx-background-color: white;
}
*/

.main-screen *.split-pane-divider {
	-fx-background-color: #f0f0f0;
}

.awesome-icon {
    -fx-font-family:  FontAwesome;
    -fx-font-size: 16px;
    -fx-font-weight:normal;
    -fx-text-fill: #808080; 
}

.tooltip {
	-fx-background-color:#f0f0f0;
	-fx-text-fill:black;
}

/*
 * HiddenSpliter
 */
 
 .hiddenSplitter {
	-fx-background-color: null;
    -fx-padding: 1px;
}

.hiddenSplitter *.split-pane-divider,
.hiddenSplitter *.vertical-grabber, 
.hiddenSplitter *.horizontal-grabber {
    -fx-background-color: #f0f0f0;
    -fx-border-color: null;
    -fx-padding: 3px;
}
 
 
 /* 
 .choice-box {
 	-fx-background-color: white; 
 	-fx-border-width: 1, 2, 3, 4;
 	-fx-border-radius: 7;
 }
 * 
 */
 

 .choice-box > .label {
 	-fx-padding:2;
 }
 
/* 
 * Flat Button
 */

.flat-button {
	-fx-background-color:  transparent;
	-fx-text-fill: black;
	-fx-padding: 0;
	-fx-alignment: bottom-center;
	-fx-max-height: 10px;
}

.choicebox .box
{
	-fx-background-color:  lightgreen;
	-fx-padding: 0;
}

.flat-button:hover {
	-fx-background-color:   -fx-body-color;
	-fx-padding: 0;
}

/*
 * Flat Toggle Button
 */ 
 
.flat-toggle-button {
    -fx-background-color: #a0a0a0, #505050, #f0f0f0;
    -fx-background-insets: 0, 0, 0;
    -fx-background-radius: 3, 2, 1;
    -fx-padding:0.0 4;
 	-fx-text-fill: -fx-text-base-color;
    -fx-alignment: CENTER;
    -fx-content-display: LEFT;
    -fx-label-padding: 0;
}


.flat-toggle-button:hover {
    -fx-background-insets: 0, 1, 1 ;
}

.flat-toggle-button:armed {
     -fx-background-insets: 0, 1, 1 2 2 1;
}

.flat-toggle-button:selected {
	-fx-background-color: #a0a0a0, #505050, derive(#f0f0f0, -20%);
	-fx-background-insets: 0, 1, 1 1 1 1;
}


.entry:hover{
	-fx-background-color:#e0e0e0;
}

/*
 * Glyphs
 */
 
.field-glyph {
	-fx-background-color: #ffffc1; 
	-fx-border-color: #bbbbbb;
	/*-fx-border-radius: 5;
	-fx-background-radius: 5;*/
	-fx-spacing: 0;
 	-fx-padding: 0; /*1 2 2 2; */
}

.field-glyph .arrow {
    -fx-background-insets: 1 0 -1 0, 0;
    -fx-background-color: transparent;
    -fx-padding: 0; /*0.166667em 0.333333em 0.166667em 0.333333em;*/ /* 2 4 2 4 */
    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
}


.field-glyph .text {
}

.field-glyph .arrow {
    -fx-background-insets: 1 0 -1 0, 0;
    -fx-background-color: transparent;
    -fx-padding: 0.166667em 0.333333em 0.166667em 0.333333em; /* 2 4 2 4 */
    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
}

.field-glyph:hover .arrow {
    -fx-background-color: -fx-mark-color, #a0a0a0;
}

.field-glyph .separator .line {
    -fx-border-style: solid;
    -fx-background-color: null;
    -fx-border-color:  transparent transparent derive(-fx-base,-35%) transparent;
}

.filter-area {
	-fx-background-color: transparent  ;
	-fx-spacing: 5;
	-fx-padding: 0;
}

/* Filter Glyph */
.filter-glyph {
	-fx-background-color: transparent; 
	-fx-border-color: transparent;
	-fx-spacing: 3;
 	-fx-padding: 0 2 0 2; 
 	-fx-alignment: center;
 }

.filter-glyph:hover {
	-fx-border-color: gray;
	-fx-border-radius: 2;
	-fx-background-radius: 2;	
}

.filter-glyph .text {
}

.filter-glyph .arrow1 {
    -fx-text-fill: transparent;
}

.filter-glyph:hover .arrow1 {
    -fx-text-fill: -fx-mark-color;
}

.filter-glyph.remote {
}

.filter-glyph.remote .text {
}

.filter-glyph.invalid .text{
	-fx-text-fill: red;
}


.actions-area {
	-fx-background-color: transparent;
	-fx-spacing: 3;
	-fx-padding: 0;
	-fx-alignment: center;
}
 
/*
 * Line Charts
 */
.top-line-chart{
	-fx-background-color:  transparent;
   	-fx-alternative-row-fill-visible: false;
	-fx-vertical-grid-lines-visible: false;   	   	
	-fx-horizontal-grid-lines-visible: false;  
	-fx-vertical-zero-line-visible: false;
	-fx-horizontal-zero-line-visible: false; 	
}
.top-line-chart .chart-plot-background{
	 -fx-background-color:  transparent;
}
.top-line-chart .default-color0.chart-series-line { -fx-stroke: darkorange; }


.default-color0.chart-series-line { -fx-stroke: darkseagreen; }


/*
 * Data Panel
 */
.data-panel {
	-fx-spacing: 4;
	-fx-padding: 10;
	-fx-background-color: #f0f0f0;	
}

.titled-pane:focused > .title {
}

.titled-pane:focused {
    -fx-text-fill: -fx-text-base-color;
}

.titled-pane:focused > .title > .arrow-button .arrow {
    -fx-background-color:  -fx-mark-highlight-color, -fx-mark-color;
}

/* 
 * Tools Pane
 */
 
.tools-pane {
	-fx-vgap:5;
	-fx-padding: 4;
	-fx-spacing: 2;
	-fx-background-color: #f0f0f0;
}

.tools-entry {
	-fx-background-color: transparent;	
}

.tools-entry:hover {
	-fx-background-color: #e0e0e0;
}

/*
 * Simulation panel
 */
 .simulation-text-entry{
 	-fx-alignment: center-left;
 	-fx-padding:  1 0 1 0;
 }


/*
 * Database Pane
 */
 .database-pane {
 	-fx-background-radius: 4;
	-fx-border-color: #b0b0b0;
 	-fx-background-color:  #f0f0f0;
 	-fx-vgap: 5;
 	-fx-padding: 5;
 	-fx-spacing: 5;
 	-fx-effect: dropshadow( one-pass-box , rgba(0.8,0.8,0.8,0.4) , 2, 0.0 , 3 , 3 );
 }
 


/* Filters */

.filter-area-title {
/* 	-fx-font-size: 9pt;*/
	/*-fx-font-weight: bold; */
}

.filter-area {
	/*-fx-background-color: #ffffff;*/
	-fx-border-color: #c0c0c0; 
	-fx-border-width: 0; 
	-fx-border-style: none;
}

.filter {
	/*-fx-background-color: #a0a0a0;*/
}

/*
 * Details pane
 */
 
.details-pane {
 	/*-fx-border-color: #d0d0d0;*/
 	/*-fx-background-color: #f0f0f0;*/
 	-fx-vgap: 5;
}
 
 .details-area {
	-fx-background-color: #ffffff;
	-fx-border-color: #c0c0c0; 
	-fx-border-width: 2; 
	-fx-border-style: none;
	-fx-padding: 0;
	-fx-font-size: 10;
}

/*
 * Charts
 */
.chart-area-symbol {
    -fx-background-color: null; /* #f9d900, white; */
    -fx-background-insets: 0, 1;
    -fx-background-radius: 0px; /* makes sure this remains circular */
    -fx-padding: 3px;
}

.legend-symbol0  {
    -fx-background-color: #f9d900;
    -fx-background-insets: 0, 2;
    -fx-background-radius: 10px;
    -fx-padding: 5px;
}
/* ... */

